<resources>
    <string name="app_name">The Shameless Self Promo App</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number" translatable="false">Contact Number</string>
    <string name="name" translatable="false">Name</string>
    <string name="amit_singh" translatable="false">Admit Sigh</string>
    <string name="include_junior" translatable="false">Include Junior</string>
    <string name="immediate_start" translatable="false">Immediate Start</string>
    <string name="available_from_date" translatable="false">Available From Date</string>
    <string name="preview_message" translatable="false">Preview Message</string>
    <string name="send_message" translatable="false">Send Message</string>

</resources>
