<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="48dp"

        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Example Name"
                android:inputType="textCapWords"

                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                tools:text="Example Number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_my_display_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textCapWords"
                tools:text="@string/amit_singh" />

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/check_box_include_junior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/include_junior" />

        <Spinner
            android:id="@+id/spinner_job_title"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            tools:listitem="@android:layout/simple_list_item_1"

            />

        <CheckBox
            android:id="@+id/check_box_immediate_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/immediate_start" />


        <EditText
            android:id="@+id/edit_text_available_from_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="date"
            android:hint="@string/available_from_date" />


        <Button
            android:id="@+id/button_preview_message"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"
            android:text="@string/preview_message" />


    </LinearLayout>

</ScrollView>